[gd_scene load_steps=4 format=3 uid="uid://cc5t5e561wx1n"]

[ext_resource type="Script" path="res://src/level_select/level_select.gd" id="1_lcua4"]
[ext_resource type="Script" path="res://src/level_select/levels_grid.gd" id="2_xuf72"]
[ext_resource type="PackedScene" uid="uid://clu5nlkxfr68m" path="res://src/kanji_drawing_level/kanji_drawing_level.tscn" id="3_je3o7"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lcua4")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 550.0
offset_bottom = 750.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="AspectRatioContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="AspectRatioContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(500, 500)
size_2d_override = Vector2i(910, 890)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="ScrollContainer" type="ScrollContainer" parent="AspectRatioContainer/SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="AspectRatioContainer/SubViewportContainer/SubViewport/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 10
script = ExtResource("2_xuf72")

[node name="KanjiDrawingLevel" parent="." instance=ExtResource("3_je3o7")]
visible = false
layout_mode = 1

[connection signal="level_selected" from="AspectRatioContainer/SubViewportContainer/SubViewport/ScrollContainer/GridContainer" to="." method="_on_grid_container_level_selected"]
[connection signal="return_to_level_menu_required" from="KanjiDrawingLevel" to="." method="_on_kanji_drawing_level_return_to_level_menu_required"]
